[gd_scene load_steps=9 format=2]

[ext_resource path="res://scenes/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://assets/img/background-wood.png" type="Texture" id=2]
[ext_resource path="res://assets/img/poster2.png" type="Texture" id=3]
[ext_resource path="res://assets/img/poster.png" type="Texture" id=4]
[ext_resource path="res://assets/font/big_font.tres" type="DynamicFont" id=5]
[ext_resource path="res://assets/font/title_font.tres" type="DynamicFont" id=6]
[ext_resource path="res://assets/font/text_font.tres" type="DynamicFont" id=7]
[ext_resource path="res://ScreenTransition.tscn" type="PackedScene" id=8]

[node name="MainMenu" type="Node"]
script = ExtResource( 1 )

[node name="Background" type="Sprite" parent="."]
modulate = Color( 0.647059, 0.647059, 0.647059, 1 )
texture = ExtResource( 2 )
centered = false

[node name="Node2D" type="Node2D" parent="."]

[node name="poster2" type="Sprite" parent="Node2D"]
modulate = Color( 0.65098, 0.647059, 0.647059, 1 )
position = Vector2( 514.894, 281.069 )
rotation = 0.307617
scale = Vector2( 2.32213, 2.32213 )
texture = ExtResource( 3 )

[node name="poster" type="Sprite" parent="Node2D"]
modulate = Color( 0.701961, 0.701961, 0.701961, 1 )
position = Vector2( 629.165, 368.133 )
rotation = -0.17375
scale = Vector2( 2.43652, 2.43652 )
texture = ExtResource( 4 )

[node name="BlackBands" type="Control" parent="."]
editor/display_folded = true
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="BlackBands"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ColorRect" type="ColorRect" parent="BlackBands/VBoxContainer"]
margin_right = 800.0
margin_bottom = 100.0
rect_min_size = Vector2( 0, 100 )
color = Color( 0, 0, 0, 1 )

[node name="ColorRect2" type="Control" parent="BlackBands/VBoxContainer"]
margin_top = 104.0
margin_right = 800.0
margin_bottom = 496.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ColorRect4" type="ColorRect" parent="BlackBands/VBoxContainer"]
margin_top = 500.0
margin_right = 800.0
margin_bottom = 600.0
rect_min_size = Vector2( 0, 100 )
color = Color( 0, 0, 0, 1 )

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="Control/VBoxContainer"]
margin_right = 800.0
margin_bottom = 100.0
rect_min_size = Vector2( 0, 100 )
custom_constants/margin_top = 10
custom_constants/margin_bottom = 10

[node name="Label" type="Label" parent="Control/VBoxContainer/MarginContainer"]
margin_top = 22.0
margin_right = 800.0
margin_bottom = 77.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0.886275, 0.882353, 0.494118, 1 )
custom_colors/font_color_shadow = Color( 0.576471, 0, 0, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 2
text = "MI$TER BOUNTY"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Control/VBoxContainer"]
margin_top = 104.0
margin_right = 800.0
margin_bottom = 496.0
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="Control/VBoxContainer/HBoxContainer"]
margin_right = 398.0
margin_bottom = 392.0
size_flags_horizontal = 3

[node name="Menus" type="VBoxContainer" parent="Control/VBoxContainer/HBoxContainer/MarginContainer"]
margin_right = 398.0
margin_bottom = 392.0
custom_constants/separation = 30
alignment = 1

[node name="New game" type="Button" parent="Control/VBoxContainer/HBoxContainer/MarginContainer/Menus"]
margin_top = 166.0
margin_right = 398.0
margin_bottom = 226.0
rect_min_size = Vector2( 0, 60 )
flat = true

[node name="Label" type="Label" parent="Control/VBoxContainer/HBoxContainer/MarginContainer/Menus/New game"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 2
text = "New game"
align = 1
valign = 1

[node name="Tutorial" type="Button" parent="Control/VBoxContainer/HBoxContainer/MarginContainer/Menus"]
visible = false
margin_top = 186.0
margin_right = 398.0
margin_bottom = 226.0
rect_min_size = Vector2( 0, 40 )
flat = true

[node name="Label2" type="Label" parent="Control/VBoxContainer/HBoxContainer/MarginContainer/Menus/Tutorial"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 1
text = "Tutorial"
align = 1
valign = 1

[node name="About" type="Button" parent="Control/VBoxContainer/HBoxContainer/MarginContainer/Menus"]
visible = false
margin_top = 221.0
margin_right = 398.0
margin_bottom = 261.0
rect_min_size = Vector2( 0, 40 )
flat = true

[node name="Label3" type="Label" parent="Control/VBoxContainer/HBoxContainer/MarginContainer/Menus/About"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 6 )
text = "About
"
align = 1
valign = 1

[node name="Container" type="Control" parent="Control/VBoxContainer/HBoxContainer"]
margin_left = 402.0
margin_right = 800.0
margin_bottom = 392.0
size_flags_horizontal = 3

[node name="HBoxContainer2" type="HBoxContainer" parent="Control/VBoxContainer"]
margin_top = 500.0
margin_right = 800.0
margin_bottom = 600.0
rect_min_size = Vector2( 0, 100 )
size_flags_horizontal = 3

[node name="MarginContainer3" type="MarginContainer" parent="Control/VBoxContainer/HBoxContainer2"]
margin_right = 398.0
margin_bottom = 100.0
size_flags_horizontal = 3
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5

[node name="Label" type="Label" parent="Control/VBoxContainer/HBoxContainer2/MarginContainer3"]
margin_left = 5.0
margin_top = 31.0
margin_right = 393.0
margin_bottom = 68.0
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 0.886275, 0.882353, 0.494118, 1 )
text = "Ludum dare 44"
align = 1

[node name="MarginContainer4" type="MarginContainer" parent="Control/VBoxContainer/HBoxContainer2"]
margin_left = 402.0
margin_right = 800.0
margin_bottom = 100.0
size_flags_horizontal = 3
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5

[node name="Label" type="Label" parent="Control/VBoxContainer/HBoxContainer2/MarginContainer4"]
margin_left = 5.0
margin_top = 31.0
margin_right = 393.0
margin_bottom = 68.0
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 0.886275, 0.882353, 0.494118, 1 )
text = "@eptwalabha 2019"
align = 1

[node name="ScreenTransition" parent="." instance=ExtResource( 8 )]

[connection signal="mouse_entered" from="Control/VBoxContainer/HBoxContainer/MarginContainer/Menus/New game" to="." method="_on_Button_mouse_entered"]
[connection signal="mouse_exited" from="Control/VBoxContainer/HBoxContainer/MarginContainer/Menus/New game" to="." method="_on_Button_mouse_exited"]
[connection signal="pressed" from="Control/VBoxContainer/HBoxContainer/MarginContainer/Menus/New game" to="." method="_on_New_game_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/HBoxContainer/MarginContainer/Menus/Tutorial" to="." method="_on_Tutorial_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/HBoxContainer/MarginContainer/Menus/About" to="." method="_on_About_pressed"]
